--- a/src/content/photos/other.mdx
+++ b/src/content/photos/other.mdx
@@ -6,60 +6,68 @@ image: { src: "/unsplash/o.jpg", alt: "Sink" }
 category: "Photos"
 ---
 
+import { Picture } from "@astrojs/image/components";
+
 <div class="my-8 mx-auto">
   <div class="grid grid-cols-8 grid-rows-8 gap-4">
     <div class="col-start-1 col-end-3 row-start-1 row-end-3">
-      <img
+      <Picture
         src="/unsplash/o.jpg"
-        style="width: 100%;
-    height: 100%;
-    object-fit: cover;"
-        alt="Image 1"
+        alt="Img 1"
+        widths={[200, 400, 600]}
+        sizes="(max-width: 800px) 100vw, 800px"
+        formats={["avif", "jpeg", "png", "webp"]}
+        aspectRatio="1:2"
       />
     </div>
     <div class="col-start-3 col-end-5 row-start-1 row-end-3">
-      <img
+      <Picture
         src="/unsplash/b.jpg"
-        style="width: 100%;
-    height: 100%;
-    object-fit: cover;"
-        alt="Image 2"
+        alt="Img 1"
+        widths={[200, 400, 600]}
+        sizes="(max-width: 800px) 100vw, 800px"
+        formats={["avif", "jpeg", "png", "webp"]}
+        aspectRatio="1:2"
       />
     </div>
     <div class="col-start-5 col-end-9 row-start-1 row-end-6">
-      <img
+      <Picture
         src="/unsplash/k.jpg"
-        style="width: 100%;
-    height: 100%;
-    object-fit: cover;"
-        alt="Image 3"
+        alt="Img 1"
+        widths={[200, 400, 600]}
+        sizes="(max-width: 800px) 100vw, 800px"
+        formats={["avif", "jpeg", "png", "webp"]}
+        aspectRatio="1:2"
       />
     </div>
     <div class="col-start-1 col-end-5 row-start-3 row-end-6">
-      <img
+      <Picture
         src="/unsplash/b.jpg"
-        style="width: 100%;
-    height: 100%;
-    object-fit: cover;"
-        alt="Image 4"
+        alt="Img 1"
+        widths={[200, 400, 600]}
+        sizes="(max-width: 800px) 100vw, 800px"
+        formats={["avif", "jpeg", "png", "webp"]}
+        aspectRatio="1:1"
       />
     </div>
     <div class="col-start-1 col-end-5 row-start-6 row-end-9">
-      <img
+      <Picture
         src="/unsplash/k.jpg"
-        style="width: 100%;
-    height: 100%;
-    object-fit: cover;"
-        alt="Image 5"
+        alt="Img 1"
+        widths={[200, 400, 600]}
+        sizes="(max-width: 800px) 100vw, 800px"
+        formats={["avif", "jpeg", "png", "webp"]}
+        aspectRatio="5:4"
       />
     </div>
     <div class="col-start-5 col-end-9 row-start-6 row-end-9">
-      <img
+      <Picture
         src="/unsplash/o.jpg"
-        style="width: 100%;
-    height: 100%;
-    object-fit: cover;"
-        alt="Image 6"
+        alt="Img 1"
+        widths={[200, 400, 600]}
+        sizes="(max-width: 800px) 100vw, 800px"
+        formats={["avif", "jpeg", "png", "webp"]}
+        aspectRatio="5:4"
       />
     </div>
   </div>
